--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "base64url"
 version = "0.1.0"
+authors = ["koyashiro <develop@koyashi.ro>"]
 edition = "2021"
+description = "Base64url encode or decode FILE or standard input, to standard output."
 
 [dependencies]
 anyhow = "1.0.58"
