--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Base64url encode or decode FILE or standard input, to standard ou
 
 [dependencies]
 anyhow = "1.0.58"
-base64-url = "1.4.13"
+base64 = "0.13.0"
 clap = { version = "3.2.8", features = ["derive"] }
 
 [dev-dependencies]
