--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ clap = { version = "3.2.12", features = ["derive"] }
 
 [dev-dependencies]
 tempfile = "3.3.0"
+
+[profile.release]
+strip = "symbols"
