ci: strip at build time
fixes #7

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
           args: -- --deny warnings
 
   build:
-    name: build on ${{ matrix.job.os }} (${{ matrix.job.target }})
+    name: build (${{ matrix.job.target }})
     runs-on: ${{ matrix.job.os }}
     strategy:
       fail-fast: false
