--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,13 +66,12 @@ jobs:
           - { target: armv7-unknown-linux-gnueabihf, os: ubuntu-latest }
           - { target: armv7-unknown-linux-musleabi, os: ubuntu-latest }
           - { target: armv7-unknown-linux-musleabihf, os: ubuntu-latest }
-          # - { target: i686-apple-darwin, os: macos-latest }
-          # - { target: i686-pc-windows-gnu, os: windows-latest }
+          - { target: i686-pc-windows-gnu, os: ubuntu-latest }
           - { target: i686-pc-windows-msvc, os: windows-latest }
           - { target: i686-unknown-linux-gnu, os: ubuntu-latest }
           - { target: i686-unknown-linux-musl, os: ubuntu-latest }
           - { target: x86_64-apple-darwin, os: macos-latest }
-          - { target: x86_64-pc-windows-gnu, os: windows-latest }
+          - { target: x86_64-pc-windows-gnu, os: ubuntu-latest }
           - { target: x86_64-pc-windows-msvc, os: windows-latest }
           - { target: x86_64-unknown-linux-gnu, os: ubuntu-latest }
           - { target: x86_64-unknown-linux-musl, os: ubuntu-latest }
