ci: update workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+
 
+permissions:
+  contents: write
+
 jobs:
   release:
     name: release (${{ matrix.job.target }})
@@ -14,21 +17,22 @@ jobs:
       matrix:
         job:
           - { target: aarch64-apple-darwin, os: macos-latest }
-          - { target: aarch64-pc-windows-msvc, os: windows-latest }
+          # - { target: aarch64-pc-windows-gnu, os: ubuntu-latest }
+          # - { target: aarch64-pc-windows-msvc, os: windows-latest }
           - { target: aarch64-unknown-linux-gnu, os: ubuntu-latest }
           - { target: aarch64-unknown-linux-musl, os: ubuntu-latest }
-          - { target: arm-unknown-linux-gnueabi, os: ubuntu-latest }
-          - { target: arm-unknown-linux-gnueabihf, os: ubuntu-latest }
-          - { target: arm-unknown-linux-musleabi, os: ubuntu-latest }
-          - { target: arm-unknown-linux-musleabihf, os: ubuntu-latest }
+          # - { target: arm-unknown-linux-gnueabi, os: ubuntu-latest }
+          # - { target: arm-unknown-linux-gnueabihf, os: ubuntu-latest }
+          # - { target: arm-unknown-linux-musleabi, os: ubuntu-latest }
+          # - { target: arm-unknown-linux-musleabihf, os: ubuntu-latest }
           - { target: armv7-unknown-linux-gnueabi, os: ubuntu-latest }
           - { target: armv7-unknown-linux-gnueabihf, os: ubuntu-latest }
           - { target: armv7-unknown-linux-musleabi, os: ubuntu-latest }
           - { target: armv7-unknown-linux-musleabihf, os: ubuntu-latest }
-          - { target: i686-pc-windows-gnu, os: ubuntu-latest }
-          - { target: i686-pc-windows-msvc, os: windows-latest }
-          - { target: i686-unknown-linux-gnu, os: ubuntu-latest }
-          - { target: i686-unknown-linux-musl, os: ubuntu-latest }
+          # - { target: i686-pc-windows-gnu, os: ubuntu-latest }
+          # - { target: i686-pc-windows-msvc, os: windows-latest }
+          # - { target: i686-unknown-linux-gnu, os: ubuntu-latest }
+          # - { target: i686-unknown-linux-musl, os: ubuntu-latest }
           - { target: x86_64-apple-darwin, os: macos-latest }
           - { target: x86_64-pc-windows-gnu, os: ubuntu-latest }
           - { target: x86_64-pc-windows-msvc, os: windows-latest }
@@ -46,20 +50,22 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ runner.os }}-${{ matrix.job.target }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-${{ matrix.job.target }}-cargo-build-release-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.job.target }}-cargo-build-release-
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
-          target: ${{ matrix.job.target }}
-          override: true
-          profile: minimal
+          targets: ${{ matrix.job.target }}
+      - name: Install cross
+        run: cargo install --force cross
+        if: runner.os == 'Linux'
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: ${{ matrix.job.os == 'ubuntu-latest' }}
-          command: build
-          args: --locked --release --target=${{ matrix.job.target }}
+        run: cargo build --locked --release --target=${{ matrix.job.target }}
+        if: runner.os != 'Linux'
+      - name: Build (cross)
+        run: cross build --locked --release --target=${{ matrix.job.target }}
+        if: runner.os == 'Linux'
       - name: Archive
         id: archive
         shell: bash
@@ -84,8 +90,8 @@ jobs:
 
           # Create archive
           case ${{ matrix.job.target }} in
-            *-pc-windows-*) 7z a "${ARCHIVE_PATH}" "${BIN_NAME}" LICENSE README.md ;;
-            *) tar -czf "${ARCHIVE_PATH}" "${BIN_NAME}" LICENSE README.md ;;
+            *-pc-windows-*) 7z a "${ARCHIVE_PATH}" "${BIN_NAME}" LICENSE-APACHE LICENSE-MIT README.md ;;
+            *) tar -czf "${ARCHIVE_PATH}" "${BIN_NAME}" LICENSE-APACHE LICENSE-MIT README.md ;;
           esac
 
           echo "ARCHIVE_PATH=${ARCHIVE_PATH}" >> "$GITHUB_ENV"
