--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,17 +2,9 @@ name: CI
 
 on:
   push:
-    paths:
-      - .github/workflows/ci.yml
-      - src/**
-      - Cargo.lock
-      - Cargo.toml
+    branches:
+      - main
   pull_request:
-    paths:
-      - .github/workflows/ci.yml
-      - src/**
-      - Cargo.lock
-      - Cargo.toml
 
 jobs:
   fmt:
@@ -21,10 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Format check
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --check
+        run: cargo fmt --check
 
   clippy:
     runs-on: ubuntu-latest
@@ -41,11 +30,10 @@ jobs:
             ~/.cargo/git/db/
             target/
           key: ${{ runner.os }}-cargo-clippy-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-clippy-
       - name: Clippy
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: -- --deny warnings
+        run: cargo clippy -- --deny warnings
 
   build:
     name: build (${{ matrix.job.target }})
@@ -55,21 +43,22 @@ jobs:
       matrix:
         job:
           - { target: aarch64-apple-darwin, os: macos-latest }
-          - { target: aarch64-pc-windows-msvc, os: windows-latest }
+          # - { target: aarch64-pc-windows-gnu, os: ubuntu-latest }
+          # - { target: aarch64-pc-windows-msvc, os: windows-latest }
           - { target: aarch64-unknown-linux-gnu, os: ubuntu-latest }
           - { target: aarch64-unknown-linux-musl, os: ubuntu-latest }
-          - { target: arm-unknown-linux-gnueabi, os: ubuntu-latest }
-          - { target: arm-unknown-linux-gnueabihf, os: ubuntu-latest }
-          - { target: arm-unknown-linux-musleabi, os: ubuntu-latest }
-          - { target: arm-unknown-linux-musleabihf, os: ubuntu-latest }
+          # - { target: arm-unknown-linux-gnueabi, os: ubuntu-latest }
+          # - { target: arm-unknown-linux-gnueabihf, os: ubuntu-latest }
+          # - { target: arm-unknown-linux-musleabi, os: ubuntu-latest }
+          # - { target: arm-unknown-linux-musleabihf, os: ubuntu-latest }
           - { target: armv7-unknown-linux-gnueabi, os: ubuntu-latest }
           - { target: armv7-unknown-linux-gnueabihf, os: ubuntu-latest }
           - { target: armv7-unknown-linux-musleabi, os: ubuntu-latest }
           - { target: armv7-unknown-linux-musleabihf, os: ubuntu-latest }
-          - { target: i686-pc-windows-gnu, os: ubuntu-latest }
-          - { target: i686-pc-windows-msvc, os: windows-latest }
-          - { target: i686-unknown-linux-gnu, os: ubuntu-latest }
-          - { target: i686-unknown-linux-musl, os: ubuntu-latest }
+          # - { target: i686-pc-windows-gnu, os: ubuntu-latest }
+          # - { target: i686-pc-windows-msvc, os: windows-latest }
+          # - { target: i686-unknown-linux-gnu, os: ubuntu-latest }
+          # - { target: i686-unknown-linux-musl, os: ubuntu-latest }
           - { target: x86_64-apple-darwin, os: macos-latest }
           - { target: x86_64-pc-windows-gnu, os: ubuntu-latest }
           - { target: x86_64-pc-windows-msvc, os: windows-latest }
@@ -88,19 +77,21 @@ jobs:
             ~/.cargo/git/db/
             target/
           key: ${{ runner.os }}-${{ matrix.job.target }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.job.target }}-cargo-build-
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
-          target: ${{ matrix.job.target }}
-          override: true
-          profile: minimal
+          targets: ${{ matrix.job.target }}
+      - name: Install cross
+        run: cargo install --force cross
+        if: runner.os == 'Linux'
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: ${{ matrix.job.os == 'ubuntu-latest' }}
-          command: build
-          args: --locked --release --target=${{ matrix.job.target }}
+        run: cargo build --locked --target=${{ matrix.job.target }}
+        if: runner.os != 'Linux'
+      - name: Build (cross)
+        run: cross build --locked --target=${{ matrix.job.target }}
+        if: runner.os == 'Linux'
 
   test:
     runs-on: ubuntu-latest
@@ -117,11 +108,10 @@ jobs:
             ~/.cargo/git/db/
             target/
           key: ${{ runner.os }}-cargo-test-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-test-
       - name: Test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-targets --all-features
+        run: cargo test --all-targets --all-features
 
   audit:
     runs-on: ubuntu-latest
@@ -129,6 +119,4 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Audit
-        uses: actions-rs/cargo@v1
-        with:
-          command: audit
+        run: cargo audit
