--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,8 @@ clap = { version = "4.4.18", features = ["derive"] }
 tempfile = "3.9.0"
 
 [profile.release]
-strip = "symbols"
+opt-level = 3
+strip = true
+lto = true
+panic = "abort"
+codegen-units = 1
